@@ -82,6 +82,6 @@ craft-n-before-switch=Number of craft(s) after signal removed
 craft-n-before-switch:tooltip=Craft at least this amount of times after signal is removed before the recipe can change.
 
 [blueprint]
-delayed-transfer-warning=Delayed blueprint tag transfer, settings might have transferred incorrectly.
+delayed-transfer-warning=Delayed blueprint tag transfer - settings might have transferred incorrectly.
 delayed-transfer-summary=Transfer summary - Transferred: __1__ | Failed: __2__
 delayed-transfer-error:library=Error: Unable to transfer tags to library blueprints
