@@ -22,7 +22,7 @@ late_migrations['100.0.0'] = function(changes)
             unstick_at_tick = 0
         }
 
-        combinator.settings.craft_n_before_switch = 0
+        combinator.settings.craft_n_before_switch = 1
     end
     
     -- update rc data
